# yt-thumbsense

./: .gitignore  Dockerfile  GitVersion.yml  README.md  TaskFile.yaml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.testing.yml  docker-compose.yml  pyproject.toml  tox.ini
src/yt_thumbsense/: __init__.py  config.py  core.py  database.py  main.py  scheduler.py  tasks.py  utils.py  worker.py
src/yt_thumbsense/models/: comment.py  request.py  score.py  video.py
src/yt_thumbsense/routers/: request.py  root.py  score.py  video.py
tests/: conftest.py
tests/integration/: conftest.py  test_settings.py
tests/integration/routes/: test_int_root.py
tests/integration/tasks/: test_calculate_single_video_comment_sentiment_valid.py
tests/unit/: conftest.py
tests/unit/routes/: test_request.py  test_root.py  test_score.py  test_video.py
tests/unit/tasks/: test_calculate_single_video_comment_sentiment.py  test_pull_video_comments_from_youtube.py  test_start_pending_videos.py  test_start_single_video.py
